--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.4",
     "hbs": "^4.0.1",
     "mongoose": "^4.11.13",
+    "nodemon": "^1.12.1",
     "semantic-ui-css": "^2.2.12"
   },
   "devDependencies": {
